--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.12.0",
+    "axios": "^1.3.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
+    "express-http-context": "^1.2.4",
     "prisma": "^4.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "winston": "^3.8.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
