--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.3.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express-http-context": "^1.2.4",
     "jsonwebtoken": "^9.0.0",
@@ -40,6 +41,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/jsonwebtoken": "^9.0.1",
